2005-04-02 12:08  antirez

	* ChangeLog, Makefile, jim-stdlib-1.0.tcl, jim.c: Added a very
	  immature start of a Jim standard library.

2005-04-02 11:09  antirez

	* ChangeLog, Makefile: Changes to Makefile to reflect that now
	  libraries must have the version in the .so/.dll filename.

2005-04-02 10:54  antirez

	* ChangeLog, jim.c: win32 opendir() and related compatibility API.

2005-04-02 09:48  antirez

	* ChangeLog, jim.c: fix for win32

2005-04-02 09:44  antirez

	* ChangeLog, Makefile, TODO, jim.c, jim.h: [package require] +
	  Makefile changes about libraries currently not working...

2005-03-31 14:20  antirez

	* ChangeLog, STYLE, TODO, jim-aio.c, jim-posix.c, jim-sdl.c,
	  jim-win32.c, jim-win32com.c, jim.c, jim.h: Implemented the C API
	  "background" for the packages system of Jim.

2005-03-29 18:50  antirez

	* ChangeLog, jim.c, test.tcl: [info args] added

2005-03-29 16:17  antirez

	* ChangeLog, jim.c: Fixed [range] for the case of unique element
	  possible as output.

2005-03-29 16:03  antirez

	* ChangeLog, jim.c: random number generator fixed. Was a problem
	  with the initialization of the sbox. (see prev CVS commit
	  comment.)

2005-03-29 15:43  antirez

	* ChangeLog, jim.c: First fix for [rand]. More later as there is an
	  evident bias due to some programming error probably.

2005-03-29 15:38  antirez

	* ChangeLog, Makefile, jim.c, jim.h: A number of fix for commands
	  optimizing a bit too much objects not shared, that didn't played
	  very well with Jim arrays.  Added the [rand] command.

2005-03-28 19:47  antirez

	* ChangeLog, jim.c, test.tcl: The behaviour of [scope] modified a
	  bit. Test updated accordingly.

2005-03-28 18:57  antirez

	* ChangeLog, jim.c, test.tcl: [scope] command + tests

2005-03-26 15:12  antirez

	* ChangeLog, Makefile, jim-sdl.c, jim.c: some GFX primitive to SDL
	  extension. Minor changes to jim.c

2005-03-25 10:34  antirez

	* ChangeLog, bench.tcl, jim.c: SetReturnCodeFromAny() modified to